refactor: load entity once in service methods